# hte

./: .gitignore  .pydocstyle  .pylintrc  README.md  doc8.ini  pyproject.toml
hte/: __init__.py
hte/configs/: __init__.py
hte/configs/data_configs/: __init__.py  dim100_isotropic_pro(+)5_pro(-)5_noise50.json  dim20_isotropic_pro(+)5_pro(-)5.json  generate_parameters.py  subgroups.py
hte/data/: __init__.py  compute_arr.py  generation.py
hte/data/results_compute_arr/: Cox_Weibull_1.0_2.0_dim=100_range=[-10.0,10.0]_nb=500_group='dim100_pred3_prog2_balanced'_July_07_24_2023_15:54:00.json  Cox_Weibull_1.0_2.0_dim=100_range=[-10.0,10.0]_nb=500_group='dim100_pred4_prog2_balanced'_July_07_26_2023_10:32:59.json  Cox_Weibull_1.0_2.0_dim=100_range=[-10.0,10.0]_nb=500_group=[dim100_pred4_prog0_balanced]_July_07_25_2023_16:08:59.json  Cox_Weibull_1.0_2.0_dim=100_range=[-10.0,10.0]_nb=500_group=[dim100_pred4_prog4_balanced]_July_07_25_2023_12:05:03.json  Cox_Weibull_1.0_2.0_dim=20_range=[-10.0,10.0]_nb=500_group=[dim20_pred4_prog0_balanced]_July_07_12_2023_15:15:24.json  Cox_Weibull_1.0_2.0_dim=20_range=[-10.0,10.0]_nb=500_group=[dim20_pred4_prog1_balanced]_September_09_18_2023_16:42:32.json  Cox_Weibull_1.0_2.0_dim=20_range=[-10.0,10.0]_nb=500_group=[dim20_pred4_prog2_balanced]_July_07_19_2023_15:05:13.json  Cox_Weibull_1.0_2.0_dim=20_range=[-10.0,10.0]_nb=500_group=[dim20_pred4_prog3_balanced]_September_09_18_2023_20:26:11.json  Cox_Weibull_1.0_2.0_dim=20_range=[-10.0,10.0]_nb=500_group=[dim20_pred4_prog4_balanced]_July_07_13_2023_16:02:12.json  Cox_Weibull_1.0_2.0_dim=20_range=[-10.0,10.0]_nb=500_group=[dim20_pred4_prog4_bis_balanced]_July_07_19_2023_10:28:22.json  analysis.py
hte/experiments/: __init__.py  analyze_expe.py  attributes.py  complexity.py  launch_compute_arr.py  launch_expe.py  run_experiments.py
hte/experiments/results_expe/: COMPLEXITY_DIM=[3, 20, 100, 500, 1000]_NB=[500]_REPET=1_October_10_14_2023_08:04:07.csv  analysis_complexity.py  analysis_rq1.py  analysis_rq2.py  analysis_rq3.py  analysis_semi_synth.py
hte/metrics/: __init__.py  metrics.py
hte/models/: directed_peeling.py  interaction_trees.py  model_based.py  multivariate.py  sequential_batting.py  sides.py  template_new_method.py  univariate.py
hte/sanity_checks/: univariate_type1.py
hte/utils/: __init__.py  utils.py
hte/viz/: __init__.py  plots.py
notebooks/: compute_arr.py  generation.py  quick_demo.py
