[build-system]
requires = ["poetry_core>=1.0.0", "setuptools>=65.6.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hte"
version = "0.0.0"
description = "Time-to-event subgroup analysis for randomized controlled trials"
authors = ["Nathan Noiry <nathan.noiry@owkin.com>, Valentine Perrin <valentine.perrin@owkin.com>"]
readme = "README.md"

repository = "https://github.com/owkin/subgroup_analysis"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Intended Audience :: Data Scientists/Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
notebook = "^6.4.12"
nbconvert = "^6.5.0"
urllib3 = "<2"
lifelines = "^0.27.7"
statsmodels = "^0.14.0"
scikit-survival = "^0.21.0"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
joblib = "^1.3.1"

[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
black = "*"
isort = "*"
docformatter = {extras = ["tomli"], version = "^1.5.0"}
pre-commit = "^2.20.0"
pylint = "*"
flake8 = "*"
flake8-docstrings = "*"
darglint = "*"
mypy = "*"
pandas-stubs = "*"
types-docutils = "^0.18.3"
types-python-dateutil = "^2.8.17"
types-setuptools = "^57.4.17"
types-Jinja2 = "^2.11.9"
types-MarkupSafe = "^1.1.10"
types-PyYAML = "^6.0.12"
typing_extensions = "^4.2.0"

[tool.black]
line-length = 88
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.github
  | \.git
  | \.mypy_cache
  | \.venv
  | \.dvc
)/
'''

[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 87
